P2 Breathe: Reverting previous change, which removed inline comments.

--- a/css/src/ui/_comments.scss
+++ b/css/src/ui/_comments.scss
@@ -15,10 +15,28 @@
 
 		.o2-comment{
 			border-top-width: 0px !important;
-			border-left: none;
-			padding-left: 0 !important;
+			border-left: 2px darken( $gray-2, 10% ) solid;
+			padding-left: 10px !important;
 			padding-top: 0;
 			margin-bottom: 20px;
+
+			.o2-comment{
+				border-left: 2px darken( $gray-2, 20% ) solid;
+
+				.o2-comment{
+					border-left: 2px darken( $gray-2, 30% ) solid;
+
+					.o2-comment{
+						border-left: 2px darken( $gray-2, 40% ) solid;
+
+						.o2-comment{
+							border-left: 2px darken( $gray-2, 50% ) solid;
+							
+						}
+
+					}
+				}
+			}
 		}
 
 	}
@@ -132,7 +150,7 @@
 		}
 
 		.o2-child-comments {
-			padding-left: 1.5em;
+			padding-left: 3.5em;
 		}
 	}
 
@@ -143,7 +161,7 @@
 
 	> .o2-comment {
 		/* Override left padding for top level comments */
-
+		
 
 		/* Make sure we have padding on the last top level comment */
 		&:last-child {
@@ -255,7 +273,7 @@
 
 .comment-meta {
 	margin-left: 45px;
-
+	
 }
 
 .comment-list article {
@@ -281,7 +299,7 @@
 
 	.o2-child-comments {
 		padding: 0.5em 0 0 0 !important;
-
+		
 
 		.o2-comment{
 			padding-left: 1.5em;
@@ -347,7 +365,7 @@
 				}
 
 				&.o2-comment-like{
-
+					
 
 					&.liked{
 
@@ -355,7 +373,7 @@
 							color: $orange-25;
 						}
 					}
-				}
+				}	
 			}
 
 			&.o2-comment-edit{
