--- a/p2-breathe/style.css
+++ b/p2-breathe/style.css
@@ -1843,10 +1843,18 @@ td.recentcommentstextend {
   }
   .o2-comment .o2-comment {
     border-top-width: 0px !important;
-    border-left: none;
-    padding-left: 0 !important;
+    border-left: 2px #e1e1e1 solid;
+    padding-left: 4px !important;
     padding-top: 0;
     margin-bottom: 20px;
+  }
+
+  .o2-comment .o2-comment .o2-comment .o2-comment {
+    border-left: 2px #999 solid;
+  }
+
+  .o2-comment .o2-comment .o2-comment .o2-comment .o2-comment {
+    border-left: none;
   }
 }
 .o2-comment .avatar {
