--- a/p2-breathe/style.scss
+++ b/p2-breathe/style.scss
@@ -56,3 +56,4 @@ UI partials provide the higher-level styles required for o2 to function and disp
 @import "css/src/ui/widgets";
 @import "css/src/ui/comments";
 @import "css/src/ui/infinite-scroll.scss";
+@import "css/src/ui/no-editing-fallback";
