--- a/style.scss
+++ b/style.scss
@@ -57,3 +57,4 @@ UI partials provide the higher-level styles required for o2 to function and disp
 @import "css/src/ui/comments";
 @import "css/src/ui/infinite-scroll.scss";
 @import "css/src/ui/no-editing-fallback";
+@import "css/src/ui/blocks";
